--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <meta charset="utf-8">
 <title>walkingmask</title>
 <meta name="description" content="">
-<meta http-equiv="refresh" content="0; URL='https://walkingmask.tk'" />
+<meta http-equiv="refresh" content="0; URL='https://walkingmask.dev'" />
 </head>
 
 <body>
-Redirect to https://walkingmask.tk
+Redirect to https://walkingmask.dev
 </body>
 
 </html>
